@@ -1,0 +1,28 @@
+// $Id$
+project(*idl): taoidldefaults {
+  IDL_Files {
+    StateTransfer.idl
+  }
+  custom_only = 1
+}
+
+project(*Server): taoserver, pi_server, exceptions {
+  after += *idl
+  Source_Files {
+    StateTransferS.cpp
+    StateTransferC.cpp
+    server.cpp
+  }
+  IDL_Files {
+  }
+}
+
+project(*Client): taoclient, exceptions {
+  after += *idl
+  Source_Files {
+    StateTransferC.cpp
+    client.cpp
+  }
+  IDL_Files {
+  }
+}
