@@ -1,0 +1,12 @@
+// file      : StateTransfer.idl
+// author    : Boris Kolpackov <boris@dre.vanderbilt.edu>
+// cvs-id    : $Id$
+
+interface StateTransfer
+{
+  short
+  number ();
+
+  oneway void
+  shutdown ();
+};
