@@ -1,3 +1,11 @@
+Fri Jan 20 11:24:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * tests/Portable_Interceptors/AdvSlot/*:
+          Added new regression from Boris Kolpackov
+          <boris at dre dot vanderbilt dot edu> for a bug with PI. Not fixed
+          yet, but having a regression will make finding the problem a lot
+          easier
+
 Fri Jan 20 11:18:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * tao/PI/ORBInitializer_Registry_Impl.cpp:
